test/2-errors/trace.test
{
  'code' : 1,
  'err' : '''\
lookup error: `unbound
trace:
  `unbound
  … 2
  test/2-errors/trace.ploy:5:9:
            (self (isub n 1))
            ~~~~~~~~~~~~~~~~~
  test/2-errors/trace.ploy:4:7:
          <do
          ~~~-
  … 4
  test/2-errors/trace.ploy:5:9:
            (self (isub n 1))
            ~~~~~~~~~~~~~~~~~
  test/2-errors/trace.ploy:4:7:
          <do
          ~~~-
  … 4
  test/2-errors/trace.ploy:5:9:
            (self (isub n 1))
            ~~~~~~~~~~~~~~~~~
  test/2-errors/trace.ploy:4:7:
          <do
          ~~~-
  … 4
  test/2-errors/trace.ploy:5:9:
            (self (isub n 1))
            ~~~~~~~~~~~~~~~~~
  test/2-errors/trace.ploy:4:7:
          <do
          ~~~-
  … 4
  test/2-errors/trace.ploy:5:9:
            (self (isub n 1))
            ~~~~~~~~~~~~~~~~~
  test/2-errors/trace.ploy:4:7:
          <do
          ~~~-
  … 4
  test/2-errors/trace.ploy:9:1:
    (f 5)
    ~~~~~
'''
}
