test/2-errors/trace.ploy
<fn f [-n]
  <if n
    <scope
      <do
        (self (isub n 1))
        void>>
    unbound>>

(f 5)
